--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.h2.console.path=/h2-console
 # Datasource
 spring.datasource.url=jdbc:h2:file:database/sample-shop-database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 #spring.jpa.show-sql=true
